tests/ui/macros/span-covering-argument-1.stderr
error[E0596]: cannot borrow `foo` as mutable, as it is not declared as mutable
  --> $DIR/span-covering-argument-1.rs:5:14
   |
LL | / macro_rules! bad {
LL | |     ($s:ident whatever) => {
LL | |         {
LL | |             let $s = 0;
LL | |             *&mut $s = 0;
   | |              ^^^^^^^ cannot borrow as mutable
...  |
LL | |     }
LL | | }
   | |_- in this expansion of `bad!`
...
LL |       bad!(foo whatever);
   |       ------------------ in this macro invocation
   |
help: consider changing this to be mutable
   |
LL |             let mut $s = 0;
   |                 +++

error: aborting due to previous error

For more information about this error, try `rustc --explain E0596`.
